<resources>
    <string name="app_name">Saúde no Mapa</string>
    <string name="facebook_app_id">407275149396946</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="name_hint">Nome completo</string>
    <string name="confirm_password_hint">Confirmar senha</string>
    <string name="progress_wait">Aguarde</string>
    <string name="phone_hint">Telefone</string>
    <string name="progress_creating_user">Criando usuário</string>
    <string name="http_error_generic">Erro ao efetuar transação, tente novamente.</string>
    <string name="http_error_500">Erro de conexão com os servidores. Tente novamente em instantes.</string>
    <string name="http_success_register_user">Usuário criado com sucesso</string>
    <string name="http_success_update_user">Usuário atualizado com sucesso</string>
    <string name="http_error_no_connection">Verifique sua conexão com a internet e tente novamente.</string>
    <string name="connection_error_snack">Erro de conexão</string>
    <string name="connection_retry">Tentar novamente</string>
    <string name="birth_date_hint">Data de nascimento</string>
    <string name="cep_hint">CEP</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="invalid_date">Insira uma data válida</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_password">Senha muito curta</string>
    <string name="name_too_short">Nome muito curto</string>
    <string name="invalid_re_password">Senhas devem ser idênticas</string>
    <string name="invalid_cep">CEP inválido</string>
    <string name="title_activity_register">Cadastro</string>

    <!-- LOGIN STRINGS-->
    <string name="login">Login</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="no_account_text">Não possui conta?</string>
    <string name="facebook_login">Login com facebook</string>
    <string name="account_login">Login com sua conta</string>
    <string name="login_error_try_again">Erro ao efetuar login. Tente novamente</string>
    <string name="login_hint_email">E-mail</string>
    <string name="dialog_reset_password_message">Informe seu e-mail para recuperar sua senha.</string>
    <string name="remember_password_email_sent">Um e-mail com instruções foi enviado ao endereço informado.</string>
    <string name="progress_logging_in">Efetuando Login</string>
    <string name="needed_permission_to_create_user">Para criar o seu usuário é necessário a seguinte permissão.</string>
    <string name="needed_permission_to_update_user">Para atualizar o seu usuário é necessário a seguinte permissão.</string>
    <string name="needed_location_permission">Para o melhor funcionamento do aplicativo, é necessária a permissão de localização.</string>
    <string name="dialog_gps_title">Acionar GPS</string>
    <string name="dialog_gps_message">Para o melhor funcionamento do aplicativo, por favor, ligue o GPS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="filter_dialog_title">Filtrar Estabelecimentos</string>
    <string name="rede_atendimento_filter">Rede Atendimento:</string>
    <string name="vinculo_sus_filter">Vínculo ao SUS:</string>
    <string name="categoria_filter">Categoria:</string>
    <string name="atendimento_urgencial_filter">Atendimento Urgencial:</string>
    <string name="atendimento_ambulatorial_filter">Atendimento Ambulatorial:</string>
    <string name="centro_cirurgico_filter">Centro Cirúrgico:</string>
    <string name="obstetra_filter">Obstetra:</string>
    <string name="neo_natal_filter">Neo Natal:</string>
    <string name="dialise_filter">Diálise:</string>
    <string name="remedies_title">Remédios</string>
    <string name="needed_camera_permission">Para escanear um código de barras, é necessário a permissão para utilizar a câmera do aparelho.</string>
    <string name="progress_searching_remedies">Buscando Remédio</string>
    <string name="search_remedy_hint">Procurar remédio</string>
    <string name="search_for_remedies_text">Utilize o campo acima para buscar remédios</string>
    <string name="no_remedies_found">Nenhum resultado para o remédio citado</string>
    <string name="principio_ativo_text">Principio ativo:</string>
    <string name="classe_terapeutica_text">Classe Terapêutica:</string>
    <string name="apresentacao_text">Apresentação:</string>
    <string name="laboratorio_text">Laboratório:</string>
    <string name="cnpj_text">CNPJ:</string>
    <string name="registro_text">Registro:</string>
    <string name="possui_restricao_text">Possui Restrição Hospitalar</string>
    <string name="filter_button_text">Filtrar</string>
    <string name="tipo_unidade_text">Tipo de Unidade:</string>
    <string name="rede_atendimento_text">Rede de Atendimento:</string>
    <string name="fluxo_clientela_text">Fluxo de Atendimento:</string>
    <string name="vinculo_sus_text">Possui Vínculo ao SUS:</string>
    <string name="phone_text">Telefone:</string>
    <string name="call_phone_permission_needed">Para efetuar a ligação, é necessário a permissão solicitada.</string>
    <string name="call_dialog_title">Efetuar Ligação</string>
    <string name="call_dialog_message">"Deseja ligar para o número "</string>
    <string name="call_dialog_positive">Ligar</string>
    <string name="call_dialog_negative">Cancelar</string>
    <string name="location_dialog_title">Abrir Mapa</string>
    <string name="location_dialog_message">Deseja abrir o mapa com a localização do estabelecimento?</string>
    <string name="location_dialog_positive">Abrir Mapa</string>
    <string name="location_dialog_negative">Cancelar</string>
    <string name="turno_atendimento_text">Turnos:</string>
    <string name="establishments_title">Estabelecimentos</string>
    <string name="menu_item_logout">Sair</string>
    <string name="menu_item_remedy">Remédios</string>
    <string name="menu_item_my_list">Minha Lista</string>
    <string name="found_remedies_text">Remédios Encontrados</string>
    <string name="menu_item_establishments">Estabelecimentos</string>
    <string name="app_id">261</string>
    <string name="device_os">Android</string>

    <string name="favorites_title">Minha Lista</string>
    <string name="fav_establishment_empty">Nenhum estabelecimento favoritado</string>
    <string name="fav_remedy_empty">Nenhum remédio favoritado</string>
    <string name="error_get_establishment_review">Erro ao tentar buscar a avaliação deste estabelecimento.</string>
    <string name="error_rating_establishment_try_again">Erro ao tentar avaliar este estabelecimento. Tente novamente.</string>
    <string name="title_activity_edit_profile">Editar Perfil</string>
    <string name="about_hint">Fale nos um pouco sobre você</string>
    <string name="progress_updating_user">Atualizando usuário</string>
    <string name="action_remove_account">Excluir conta</string>
    <string name="dialog_remove_account_title">Remover Conta</string>
    <string name="dialog_remove_account_message">Tem certeza que deseja remover sua conta? Ela poderá ser recuperada posteriormente.</string>
    <string name="dialog_remove_account_positive">Remover</string>
    <string name="dialog_remove_account_negative">Cancelar</string>
    <string name="account_removed">Conta removida com sucesso.</string>
    <string name="reactivate_account">Reativar conta</string>
    <string name="reactivate_button_text">Reativar</string>
    <string name="account_reactivated">Conta reativada com sucesso</string>
    <string name="facebook_reactivate">Reativar com facebook</string>
    <string name="user_not_found">Usuário não encontrado</string>
    <string name="dialog_leave_group_message">"Você deixará de receber mensagens postadas neste grupo. Tem certeza que deseja sair? "</string>
    <string name="dialog_leave_group_title">Sair do Grupo</string>
    <string name="dialog_leave_group_positive">Sair</string>
    <string name="dialog_leave_group_negative">Cancelar</string>
    <string name="empty_group_text">O grupo está vazio</string>
    <string name="dialog_join_group_title">Participar do Grupo</string>
    <string name="dialog_join_group_message">Você receberá as mensagens postadas neste grupo. Deseja fazer parte deste grupo?</string>
    <string name="dialog_join_group_positive">Participar</string>
    <string name="dialog_join_group_negative">Cancelar</string>
    <string name="menu_item_my_groups">Meus Grupos</string>
    <string name="menu_item_about">Sobre</string>
    <string name="empty_my_group_text">Você não está participando de nenhum grupo</string>
    <string name="my_groups_title">Meus Grupos</string>
    <string name="about_title">Sobre o Aplicativo</string>
    <string name="doubt_or_suggestions"><![CDATA[Qualquer dúvida ou sugestão, favor entrar em contato pelo email: <b>brandao309@gmail.com<b>]]></string>
    <string name="about_text"><![CDATA[O aplicativo <b>Saúde no Mapa</b> foi desenvolvido com o intuito de concorrer no concurso DESAFIO DE APLICATIVOS CÍVICOS: CONTROLE SOCIAL DIGITAL-2016, disponibilizado pelo Tribunal de Contas da União, com o objetivo de ajudar a população utilizando dados abertos.]]></string>
    <string name="title_one">Estabelecimentos de Saúde</string>
    <string name="description_one">Pesquise e veja todas as informações sobre os estabelecimentos de saúde próximos a você.</string>
    <string name="title_two">Remédios</string>
    <string name="description_two">Veja informações sobre os remédios cadastrados no DATASUS</string>
    <string name="title_three">Chats em Grupo</string>
    <string name="description_three">Converse com quem está no estabelecimento de saúde naquele momento, e obtenha informações em tempo real sobre o estado do local.</string>
    <string name="search_establishment_hint">Buscar Estabelecimentos</string>
    <string name="menu_item_emergency">Emergência</string>
    <string name="emergency_title">Serviços de Emergência</string>
    <string name="search_emergency_hint">Buscar serviços de emergência</string>
    <string name="dialog_gps_positive">Ligar GPS</string>
    <string name="dialog_gps_negative">Continuar</string>
    <string name="dialog_police_message">Deseja ligar para a Polícia Militar (190)?</string>
    <string name="dialog_fireman_message">Deseja ligar para o Corpo de Bombeiros (193)?</string>
    <string name="dialog_samu_message">Deseja ligar para o SAMU (192)?</string>
    <string name="price_text">Preço:</string>
    <string name="establishment_no_results">Nenhum estabelecimento encontrado</string>
</resources>
