<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/root_relative_layout">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/login_background_image"
           android:scaleType="centerCrop"
           android:src="@drawable/login_back_dark"/>
   </FrameLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="#44000000"/>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/logo_image"
        android:src="@drawable/app_icon"
        android:scaleType="fitCenter"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"/>

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="#000"-->
    <!--android:alpha=".2"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:fillViewport="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_layout"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                android:alpha="0"
                tools:alpha="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayout"
                    android:textColorHint="@color/login_edit_text_color"
                    android:id="@+id/login_email_input">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_email_edit"
                        android:theme="@style/editText"
                        android:textColor="@color/white"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:maxLength="30"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayout"
                    android:textColorHint="@color/login_edit_text_color"
                    android:id="@+id/login_password_input">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_password_edit"
                        android:maxLength="20"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:theme="@style/editText"
                        android:hint="@string/password_hint"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password"
                    android:textColor="@color/icons"
                    android:layout_gravity="right"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="italic"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:text="@string/forgot_password"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/login_normal_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/account_register"
                    android:textColor="@color/icons"
                    android:layout_gravity="right"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/no_account_text"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/login_facebook_button"
                android:text="@string/facebook_login"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/com_facebook_button_icon"
                android:backgroundTint="@color/facebook_blue"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/account_login"
                android:textColor="@color/icons"
                android:layout_gravity="right"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:text="@string/account_login"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
